--- a/trainw.ipynb
+++ b/trainw.ipynb
@@ -88,86 +88,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "('!',\n",
-       " 'D',\n",
-       " ' ',\n",
-       " 'x',\n",
-       " 'i',\n",
-       " 'R',\n",
-       " 'Y',\n",
-       " 'W',\n",
-       " 'q',\n",
-       " 'H',\n",
-       " 'e',\n",
-       " 'y',\n",
-       " '&',\n",
-       " 'k',\n",
-       " 'b',\n",
-       " 'I',\n",
-       " 'U',\n",
-       " 'Q',\n",
-       " 's',\n",
-       " 'S',\n",
-       " 'N',\n",
-       " 'g',\n",
-       " '3',\n",
-       " 'z',\n",
-       " 'l',\n",
-       " 'T',\n",
-       " \"'\",\n",
-       " 'w',\n",
-       " ',',\n",
-       " '?',\n",
-       " ':',\n",
-       " 'u',\n",
-       " 'M',\n",
-       " 'G',\n",
-       " 'E',\n",
-       " 'd',\n",
-       " 'F',\n",
-       " '.',\n",
-       " 'v',\n",
-       " 'j',\n",
-       " '-',\n",
-       " 'C',\n",
-       " 'n',\n",
-       " ';',\n",
-       " 'Z',\n",
-       " 'f',\n",
-       " 'o',\n",
-       " 'A',\n",
-       " 'p',\n",
-       " 'h',\n",
-       " 'B',\n",
-       " 'r',\n",
-       " 'P',\n",
-       " 'V',\n",
-       " 'a',\n",
-       " 'm',\n",
-       " 'J',\n",
-       " '$',\n",
-       " '\\n',\n",
-       " 'c',\n",
-       " 'O',\n",
-       " 'K',\n",
-       " 't',\n",
-       " 'X',\n",
-       " 'L')"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'chars' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m chars[:\u001b[39m5\u001b[39m]\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'chars' is not defined"
+     ]
     }
    ],
    "source": [
-    "chars"
+    "chars[:5]"
    ]
   },
   {
@@ -4322,7 +4259,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.9.16"
   },
   "orig_nbformat": 4
  },
